--- a/MessageBorder/WebRoot/WEB-INF/web.xml
+++ b/MessageBorder/WebRoot/WEB-INF/web.xml
@@ -23,6 +23,13 @@
     <servlet-name>MessageServlet</servlet-name>
     <servlet-class>com.imau.servlet.MessageServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>ManagerServlet</servlet-name>
+    <servlet-class>com.imau.servlet.ManagerServlet</servlet-class>
+  </servlet>
+
 
 
 
@@ -37,6 +44,10 @@
   <servlet-mapping>
     <servlet-name>MessageServlet</servlet-name>
     <url-pattern>/MessageServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ManagerServlet</servlet-name>
+    <url-pattern>/ManagerServlet</url-pattern>
   </servlet-mapping>	
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
@@ -59,4 +70,10 @@
 <filter-name>CharacterEncodingFilter</filter-name>
 <url-pattern>/*</url-pattern>
 </filter-mapping>
+
+<welcome-file-list>
+    <welcome-file>welcome.jsp</welcome-file>
+    <welcome-file>welcome.jsp</welcome-file>
+</welcome-file-list>
+
 </web-app>
